# AS-Cure-Pharmacy

./: .gitignore  LICENSE  README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/app/: main.py
backend/app/api/: __init__.py  contact.py  reviews.py
backend/app/core/: config.py  limiter.py
backend/app/db/: database.py  models.py
backend/app/schemas/: contact.py  review.py
backend/app/services/: email.py
docs/: .gitignore  backend.md  changes.md  deployment.md  frontend.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AboutUs.tsx  Associates.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  ProductCard.tsx  Products.tsx  ReviewCard.tsx  Reviews.tsx  Slider.tsx  WhyChooseCard.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: details.ts  utils.ts
frontend/src/pages/: HomePage.tsx
